my-gateway/deploy-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template: # 根据此模板创建Pod的副本
    metadata:
      labels: # Pod副本拥有的标签
        app: gateway
    spec:
      #nodeName: k8s-node-062
      volumes:
        - name: skywalking-agent
          emptyDir: { }
      containers:
        - name: my-gateway
          image: hub.anicert.cn/library/my-gateway:1.0.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: skywalking-agent
              mountPath: /skywalking/agent
          ports:
            - containerPort: 8085
          readinessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              port: 8085
              path: /gateway/status
            initialDelaySeconds: 150
            periodSeconds: 60
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - name: http
      port: 8085
      targetPort: 8085
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-test
spec:
  rules:
    - host: 123.60.223.118
      http:
        paths:
        - path: /
          backend:
            serviceName: gateway-svc
            servicePort: 8085
